# hiraoyogizzard

./: .gitignore  Current.md  README.md  openapi.yaml  test_request.json
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  backend-test-ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/: router.py
backend/app/api/endpoints/: howa.py
backend/app/core/: config.py  error_handler.py  test_data.py
backend/app/models/: howa.py
backend/app/services/: gemini_service.py  howa_service.py  task_queue.py  task_worker.py
backend/app/services/agents/: kyotenFinder.py  newsResearcher.py  queryMaker.py  reviewer.py  sutraResearcher.py  writer.py
backend/tests/: test_howa_api.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/.claude/: settings.local.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  generated.ts
frontend/src/components/: HomePage.css  HomePage.tsx  HowaFeedback.tsx  HowaForm.tsx  LoadingSpinner.tsx
frontend/src/mocks/: browser.ts  handlers.ts
infra/manifests/: .gitignore  00-namespace.yaml  15-valkey-deployment.yaml  16-valkey-service.yaml  20-deployment.yaml  25-service.yaml  30-ingress.yaml  35-backend-config.yaml  40-managed-certificate.yaml
sketch/: main.py  pyproject.toml
tools/: .gitignore  create_data_store.sh  docx-urls.list  download_files.py  setup_datastore_and_upload.py  upload_json_document.sh  upload_to_vertex_ai_search.py  upload_xml_documents.py  url.list
(+1 files in other folders)
