[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "google-cloud-aiplatform>=1.116.0",
    "google-cloud-discoveryengine>=0.13.12",
    "google-generativeai>=0.8.5",
    "httpx==0.28.1",
    "pydantic==2.11.3",
    "pydantic-settings==2.10.1",
    "pytest==7.3.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.1",
]
asyncio_mode = "auto"
[dependency-groups]
dev = [
    "pytest-asyncio>=0.23.8",
]
